--- a/typescript-iterator/package.json
+++ b/typescript-iterator/package.json
@@ -10,6 +10,8 @@
     "typescript": "^5"
   },
   "dependencies": {
-    "elysia": "^1.4.25"
+    "@nats-io/jetstream": "^3.3.1",
+    "elysia": "^1.4.25",
+    "nats": "^2.29.3"
   }
 }
