Implement asynchronous TCP server and client using Boost.Asio coroutines
- Added main server implementation in main.cpp that listens on port 7878 and handles client connections.
- Implemented client coroutine in main_client.cpp that connects to the server, sends a message, and receives a response.
- Utilized Boost.Asio's co_spawn and awaitable features for asynchronous operations.
- Included error handling for client disconnections and exceptions.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
         "jetstream"
-    ]
+    ],
+    "cmake.sourceDirectory": "/Users/hasircioglu/projects/self-examples/cpp_coroutinues_and_boost_asi_tcp_server"
 }
